[Issue 6] Add phase and includeTestDirectory property

--- a/pom.xml
+++ b/pom.xml
@@ -62,16 +62,19 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>${checkstyle-maven-plugin.version}</version>
-                <configuration>
-                    <configLocation>/src/main/resources/cfg/checkstyle.xml</configLocation>
-                </configuration>
                 <executions>
                     <execution>
+                        <id>check</id>
+                        <phase>validate</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <configLocation>/src/main/resources/cfg/checkstyle.xml</configLocation>
+                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                </configuration>
             </plugin>
         </plugins>
     </build>
