--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,15 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.0.1.RELEASE</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
