--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=useremail
-spring.mail.password=userpassword
+spring.mail.username=email
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTime=518400000
 spring.profiles.active=dev
-address=localhost:8080
+address=http://localhost:8080
