[issue - 44] Add condition if token on activation email is valid then we active email. Else we throw exception with message.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.mail.username=email
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-verifyEmailTime=518400000
+verifyEmailTimeHour=24
 spring.profiles.active=dev
 address=http://localhost:8080
