--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -2,4 +2,4 @@ url=jdbc:mysql://localhost:3306/GreenCity?useUnicode=true&useJDBCCompliantTimezo
 username=root
 password=root
 driver=com.mysql.cj.jdbc.Driver
-outputChangeLogFile=src/main/resources/db/changelog/db.changelog-output.xml
+outputChangeLogFile=src/main/resources/db/changelog/db.changelog-output-1.0.1.xml
