[issue - 6] edit checkstyle config and path to checkstyle config

--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configLocation>checkstyle/greenCity_checkstyle.xml</configLocation>
+                    <configLocation>checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
         </plugins>
