--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=email
-spring.mail.password=password
+spring.mail.username=nazar.stasyuk.dev@gmail.com
+spring.mail.password=GuN41Kdev
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
@@ -17,3 +17,7 @@ verifyEmailTimeHour=24
 spring.profiles.active=dev
 address=http://localhost:8080
 client.address=http://localhost:4200
+
+tokenValidTimeInMinutes=15
+
+tokenKey=123123123
