[issue - 81] Add simple google security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,18 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
 spring.profiles.active=dev
 address=http://localhost:8080
 client.address=http://localhost:4200
-
 accessTokenValidTimeInMinutes=15
 refreshTokenValidTimeInMinutes=60
-
 tokenKey=123123123
+security.oauth2.client.clientId=${clientId}
+security.oauth2.client.clientSecret=${clientSecret}
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=openid,email,profile
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=true
+spring.main.allow-bean-definition-overriding=true
