--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,38 @@
+spring.datasource.url=jdbc:mysql://szcsj0mhs2cjdwza:ree5pgkkzsvbpkrz@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
+spring.datasource.username=szcsj0mhs2cjdwza
+spring.datasource.password=flnbp0iv4f13o8qy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=email
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+verifyEmailTimeHour=24
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+address=https://pacific-inlet-30349.herokuapp.com
+
 logging.level.root=info
 logging.path=logs
 logging.file=${logging.path}/log.log
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n
+
+#mysql://szcsj0mhs2cjdwza:ree5pgkkzsvbpkrz@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
+#Host	l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+#Username	szcsj0mhs2cjdwza
+#Password	flnbp0iv4f13o8qy
+#Port	3306
+#Database	arw5w15hky0z3d0t
+
+# To shutdown instance of the app on Heroku server
+#heroku ps:scale web=0
+
+# To activate instance of the app on Heroku server
+#heroku ps:scale web=1
+
+# Heroku Api key as token
+#heroku auth:token
