--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,20 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=email
+spring.mail.password=password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+verifyEmailTimeHour=24
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+address=http://localhost:8080
+
 logging.level.root=info
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
