--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=email
-spring.mail.password=password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-verifyEmailTimeHour=24
-spring.profiles.active=dev
-address=http://localhost:8080
+
+spring.profiles.active=prod
