--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -33,6 +33,10 @@ logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} [%p] [%t] %M\\(%F:%L\\) - 
 #Port	3306
 #Database	arw5w15hky0z3d0t
 
+# CREDENTIALS
+# studroma@gmail.com
+# 427_java
+
 # To shutdown instance of the app on Heroku server
 #heroku ps:scale web=0
 
