--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:mysql://localhost:3306/GreenCity?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-username=root
-password=root
+url=jdbc:mysql://szcsj0mhs2cjdwza:ree5pgkkzsvbpkrz@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
+username=szcsj0mhs2cjdwza
+password=flnbp0iv4f13o8qy
 driver=com.mysql.cj.jdbc.Driver
 outputChangeLogFile=src/main/resources/db/changelog/db.changelog-output-1.0.1.xml
