--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.datasource.password=flnbp0iv4f13o8qy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.hikari.maximumPoolSize=6
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=upadte
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
