--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,7 +13,7 @@ spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 address=https://pacific-inlet-30349.herokuapp.com
 
