--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://szcsj0mhs2cjdwza:ree5pgkkzsvbpkrz@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
+spring.datasource.url=jdbc:mysql://szcsj0mhs2cjdwza:flnbp0iv4f13o8qy@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
 spring.datasource.username=szcsj0mhs2cjdwza
 spring.datasource.password=flnbp0iv4f13o8qy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.datasource.hikari.maximumPoolSize=6
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.hikari.maximumPoolSize=6
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -13,7 +13,7 @@ spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 address=https://pacific-inlet-30349.herokuapp.com
 
