--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,8 +3,8 @@ spring.datasource.username=szcsj0mhs2cjdwza
 spring.datasource.password=flnbp0iv4f13o8qy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.hikari.maximumPoolSize=6
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -13,7 +13,7 @@ spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
-spring.liquibase.enabled=true
+spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 address=https://pacific-inlet-30349.herokuapp.com
 
