--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://szcsj0mhs2cjdwza:flnbp0iv4f13o8qy@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
+spring.datasource.url=jdbc:mysql://szcsj0mhs2cjdwza:o4m1n7eapbox9mwg@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/arw5w15hky0z3d0t
 spring.datasource.username=szcsj0mhs2cjdwza
-spring.datasource.password=flnbp0iv4f13o8qy
+spring.datasource.password=o4m1n7eapbox9mwg
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
