--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -15,8 +15,9 @@ verifyEmailTimeHour=24
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
-address=http://localhost:8080
-client.address=http://localhost:4200
+address=https://pacific-inlet-30349.herokuapp.com
+# TODO change to real deployed client address
+client.address=https://pacific-inlet-30349.herokuapp.com
 
 accessTokenValidTimeInMinutes=15
 refreshTokenValidTimeInMinutes=60
