--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -15,7 +15,11 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
 address=https://pacific-inlet-30349.herokuapp.com
+# TODO change to real deployed client address
+client.address=https://pacific-inlet-30349.herokuapp.com
+
 
 accessTokenValidTimeInMinutes=15
 refreshTokenValidTimeInMinutes=60
