--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ spring.datasource.username=blbd5rqaj3rg5ngq
 spring.datasource.password=ro7zanwkt9ymkphg
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.hikari.maximumPoolSize=6
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
@@ -13,7 +13,7 @@ spring.mail.password=${password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 address=https://pacific-inlet-30349.herokuapp.com
