set email password

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,8 +8,8 @@ spring.datasource.hikari.maximumPoolSize=6
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${email}
-spring.mail.password=${password}
+spring.mail.username=rost.khasanov@gmail.com
+spring.mail.password=nejtrino24
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
