--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Green City</name>
     <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>1.8</java.version>
@@ -166,6 +167,12 @@
 <!--                    <configLocation>checkstyle/greenCity_checkstyle.xml</configLocation>-->
 <!--                </configuration>-->
 <!--            </plugin>-->
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>2.0.8</version>
+                </plugin>
+
         </plugins>
     </build>
 
