added tests, fixed names

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,3 +14,6 @@ verifyEmailTimeHour=24
 spring.profiles.active=dev
 address=http://localhost:8080
 client.address=http://localhost:4200
+accessTokenValidTimeInMinutes=15
+refreshTokenValidTimeInMinutes=60
+tokenKey=123123123 
