--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,3 @@
 logging.level.root=info
 logging.level.greencity.exception.CustomExceptionHandler=trace
-logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} [%p] [%t] %M\\(%F:%L\\) - %msg%n
-#  %d{dd-MM-yyyy HH:mm:ss.SSS} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
+logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
