--- a/pom.xml
+++ b/pom.xml
@@ -161,7 +161,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <configLocation>checkstyle/greenCity_checkstyle.xml</configLocation>
+                    <configLocation>checkstyle.xml</configLocation>
                 </configuration>
             </plugin>
         </plugins>
