--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://blbd5rqaj3rg5ngq:ro7zanwkt9ymkphg@l3855uft9zao23e2.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/xd4axpbui6bkazw3
-spring.datasource.username=blbd5rqaj3rg5ngq
-spring.datasource.password=ro7zanwkt9ymkphg
+spring.datasource.url=${JAWSDB_URL}
+spring.datasource.username=${USER}
+spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
