Update prod prop

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,17 +1,17 @@
 spring.datasource.url=${JAWSDB_URL}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.hikari.maximumPoolSize=6
-spring.jpa.show-sql=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=rost.khasanov@gmail.com
-spring.mail.password=nejtrino24
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.datasource.driver-class-name=${DRIVER}
+spring.jpa.properties.hibernate.dialect=${DIALECT}
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_CONFIG}
+spring.datasource.hikari.maximumPoolSize=${POOL_SIZE}
+spring.jpa.show-sql=${SHOW_SQL}
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USER}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=${SMTP_AUTH}
+spring.mail.properties.mail.smtp.starttls.enable=${SMTP_ENABLE}
 verifyEmailTimeHour=24
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
