--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,19 +12,19 @@ spring.mail.username=${MAIL_USER}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_ENABLE}
-verifyEmailTimeHour=24
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-address=https://pacific-inlet-30349.herokuapp.com
+verifyEmailTimeHour=${VERIFY_EMAIL}
+spring.liquibase.enabled=${LIQUIBASE_ENABLE}
+spring.liquibase.change-log=${LIQUIBASE_LOG}
+address=${BACKEND_ADDRESS}
 # TODO change to real deployed client address
-client.address=https://www.google.com/
-accessTokenValidTimeInMinutes=15
-refreshTokenValidTimeInMinutes=60
-tokenKey=123123123
+client.address=${CLIENT_ADDRESS}
+accessTokenValidTimeInMinutes=${TOKEN_ACCESS_TIME}
+refreshTokenValidTimeInMinutes=${TOKEN_REFRESH_TIME}
+tokenKey=${TOKEN_KEY}
 
 
-logging.level.root=info
-logging.level.greencity.exception.CustomExceptionHandler=trace
-logging.path=logs
-logging.file=${logging.path}/log.log
-logging.pattern.file=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
+logging.level.root=${LOG_LEVEL_ROOT}
+logging.level.greencity.exception.CustomExceptionHandler=${LOG_EXCEPTION_HANDLER}
+logging.path=${LOG_PATH}
+logging.file=${LOG_FILE}
+logging.pattern.file=${LOG_PATTERN}
