Replaced liquibase properties into application.properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,6 +18,9 @@ verifyEmailTimeHour=${VERIFY_EMAIL}
 
 spring.liquibase.enabled=${LIQUIBASE_ENABLE}
 spring.liquibase.change-log=${LIQUIBASE_LOG}
+spring.liquibase.url=${JAWSDB_URL}
+spring.liquibase.user=${USER}
+spring.liquibase.password=${PASSWORD}
 
 address=${BACKEND_ADDRESS}
 client.address=${CLIENT_ADDRESS}
