--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -14,6 +14,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 verifyEmailTimeHour=24
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.user=root
+spring.liquibase.password=root
+spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+
 
 address=http://localhost:8080
 client.address=http://localhost:4200
