--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.user=root
 spring.liquibase.password=root
 spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-
+tokenKey=123123123
 
 address=http://localhost:8080
 client.address=http://localhost:4200
