[issue - 98] Fix some problems. Add java docs.

--- a/pom.xml
+++ b/pom.xml
@@ -130,9 +130,11 @@
             <version>2.9.2</version>
         </dependency>
 
-
-
-
+        <dependency>
+            <groupId>com.google.api-client</groupId>
+            <artifactId>google-api-client</artifactId>
+            <version>1.30.2</version>
+        </dependency>
 
     </dependencies>
 
