--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${email}
@@ -20,6 +20,7 @@ spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotEx
 
 address=http://localhost:8080
 client.address=http://localhost:4200
+google.clientId=${googleClientId}
 
 accessTokenValidTimeInMinutes=15
 refreshTokenValidTimeInMinutes=60
