Updated prod properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -28,6 +28,7 @@ client.address=${CLIENT_ADDRESS}
 accessTokenValidTimeInMinutes=${TOKEN_ACCESS_TIME}
 refreshTokenValidTimeInMinutes=${TOKEN_REFRESH_TIME}
 tokenKey=${TOKEN_KEY}
+google.clientId=${GOOGLE_CLIENT_ID}
 
 logging.level.root=${LOG_LEVEL_ROOT}
 logging.level.greencity.exception.CustomExceptionHandler=${LOG_EXCEPTION_HANDLER}
