--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
             <version>1.30.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring5</artifactId>
+            <version>3.0.11.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
