[issue - 148] add ApiImplicitParams for pageable, fix tests

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -27,5 +27,6 @@ refreshTokenValidTimeInMinutes=60
 tokenKey=123123123
 
 logging.level.root=info
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
