delete bad validation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
+spring.datasource.url=jdbc:mysql://localhost:3306/GreenCity2?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,7 +16,7 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.user=${user}
 spring.liquibase.password=${passwordLiquibase}
-spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity2?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 
 address=http://localhost:8080
 client.address=http://localhost:4200
