--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -22,7 +22,7 @@ address=http://localhost:8080
 client.address=http://localhost:4200
 google.clientId=${googleClientId}
 
-accessTokenValidTimeInMinutes=15
+accessTokenValidTimeInMinutes=1000
 refreshTokenValidTimeInMinutes=60
 tokenKey=123123123
 
