--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
-language: java
-dist: trusty
-
 addons:
-    sonarcloud:
-        organization: "softserve-social-projects"
-        token:
-            secure: "f3b8179f9f5659ebd4be99410d38f8770f7859c2"
-            
+  sonarcloud:
+    organization: "bogdan"
+    token:
+      secure: "cdb0f4a6470f40be20d7286a12a87ca4918b3e9a" # encrypted value of your token
 jdk:
   - oraclejdk8
-
+  
 script:
   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=SoftServe-Social-Projects_GreenCity -DskipTests=true
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
+
+
+# script:
+#   # the following command line builds the project, runs the tests with coverage and then execute the SonarCloud analysis
+#   - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -Dsonar.projectKey=SoftServe-Social-Projects_GreenCity -DskipTests=true
