--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/greencity
+spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.jpa.show-sql=false
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -16,7 +18,7 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.liquibase.user=${user}
 spring.liquibase.password=${passwordLiquibase}
-spring.liquibase.url=jdbc:mysql://localhost:3306/GreenCity?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.liquibase.url=jdbc:postgresql://localhost:5432/greencity
 
 address=http://localhost:8080
 client.address=http://localhost:4200
