--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GreenCityTest?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -18,6 +17,7 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 spring.profiles.active=dev
 address=http://localhost:8080
 client.address=http://localhost:4200
+google.clientId=${googleClientId}
 
 accessTokenValidTimeInMinutes=15
 refreshTokenValidTimeInMinutes=60
