Added GoalTranslation entity, modified Goal entity

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/greencity
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=oleg12311999
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.hibernate.ddl-auto=none
