--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -22,6 +22,7 @@ spring.liquibase.url=jdbc:postgresql://localhost:5432/greencity
 
 address=http://localhost:8080
 client.address=http://localhost:4200
+econews.address=http://localhost:4200/econews
 google.clientId=${googleClientId}
 
 accessTokenValidTimeInMinutes=120
