--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -24,6 +24,7 @@ spring.liquibase.password=${PASSWORD}
 
 address=${BACKEND_ADDRESS}
 client.address=${CLIENT_ADDRESS}
+econews.address=${ECO_NEWS_ADDRESS}
 
 accessTokenValidTimeInMinutes=${TOKEN_ACCESS_TIME}
 refreshTokenValidTimeInMinutes=${TOKEN_REFRESH_TIME}
