add functionality for news sender and email validation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,6 +23,7 @@ spring.liquibase.url=jdbc:postgresql://localhost:5432/greencity
 address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/econews
+sender.email.address=greencity448@gmail.com
 google.clientId=${googleClientId}
 
 accessTokenValidTimeInMinutes=120
