--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,37 +1,42 @@
+# Datasource
 spring.datasource.url=${JAWSDB_URL}
 spring.datasource.username=${USER}
 spring.datasource.password=${PASSWORD}
 spring.datasource.driver-class-name=${DRIVER}
-spring.jpa.properties.hibernate.dialect=${DIALECT}
+
+# Liquibase
+spring.liquibase.url=${JAWSDB_URL}
+spring.liquibase.user=${USER}
+spring.liquibase.password=${PASSWORD}
+spring.liquibase.enabled=${LIQUIBASE_ENABLE}
+spring.liquibase.change-log=${LIQUIBASE_LOG}
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=${HIBERNATE_CONFIG}
+spring.jpa.properties.hibernate.dialect=${DIALECT}
 spring.datasource.hikari.maximumPoolSize=${POOL_SIZE}
 spring.jpa.show-sql=${SHOW_SQL}
 
+# Mail sender
 spring.mail.host=${MAIL_HOST}
 spring.mail.port=${MAIL_PORT}
 spring.mail.username=${MAIL_USER}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${SMTP_ENABLE}
-
-verifyEmailTimeHour=${VERIFY_EMAIL}
-
-spring.liquibase.enabled=${LIQUIBASE_ENABLE}
-spring.liquibase.change-log=${LIQUIBASE_LOG}
-spring.liquibase.url=${JAWSDB_URL}
-spring.liquibase.user=${USER}
-spring.liquibase.password=${PASSWORD}
-
 address=${BACKEND_ADDRESS}
 client.address=${CLIENT_ADDRESS}
 econews.address=${ECO_NEWS_ADDRESS}
 sender.email.address=${SENDER_EMAIL_ADDRESS}
+google.clientId=${GOOGLE_CLIENT_ID}
 
+# Tokens expiration time
 accessTokenValidTimeInMinutes=${TOKEN_ACCESS_TIME}
 refreshTokenValidTimeInMinutes=${TOKEN_REFRESH_TIME}
 tokenKey=${TOKEN_KEY}
-google.clientId=${GOOGLE_CLIENT_ID}
+verifyEmailTimeHour=${VERIFY_EMAIL}
 
+# Logger
 logging.level.root=${LOG_LEVEL_ROOT}
 logging.level.greencity.exception.handler.CustomExceptionHandler=${LOG_EXCEPTION_HANDLER}
 logging.path=${LOG_PATH}
