Resolved merge conflict

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
 sender.email.address=${EMAIL_ADDRESS}
-google.clientId=${googleClientId}
+google.clientId=${GOOGLE_CLIENT_ID}
 
 # Token expiration time
 accessTokenValidTimeInMinutes=120
