Fixed conflicts after pulling from dev

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,35 +1,42 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/greencity
-spring.datasource.username=postgres
-spring.datasource.password=root
+# Datasource
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-spring.jpa.show-sql=false
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${email}
-spring.mail.password=${password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-verifyEmailTimeHour=24
+# Liquibase
+spring.liquibase.url=${DATASOURCE_URL}
+spring.liquibase.user=${DATASOURCE_USER}
+spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-spring.liquibase.user=${user}
-spring.liquibase.password=${passwordLiquibase}
-spring.liquibase.url=jdbc:postgresql://localhost:5432/greencity
 
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=false
+spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
+
+# Mail sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_ADDRESS}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
-econews.address=http://localhost:4200/econews
-sender.email.address=greencity448@gmail.com
-google.clientId=${googleClientId}
+econews.address=http://localhost:4200/welcome
+sender.email.address=${EMAIL_ADDRESS}
+google.clientId=${GOOGLE_CLIENT_ID}
 
+# Token expiration time
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 tokenKey=123123123
+verifyEmailTimeHour=24
 
+# Logger
 logging.level.root=info
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
