--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,25 +1,43 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/GreenCityTest?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=Europe/Kiev
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${email}
-spring.mail.password=${password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-verifyEmailTimeHour=24
+# Datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Liquibase
+spring.liquibase.url=jdbc:postgresql://localhost:5432/test
+spring.liquibase.user=${DATASOURCE_USER}
+spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
-spring.profiles.active=dev
+# Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=false
+spring.jpa.database-platform =org.hibernate.dialect.PostgreSQL9Dialect
+
+# Mail sender
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_ADDRESS}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
+econews.address=http://localhost:4200/welcome
+sender.email.address=${EMAIL_ADDRESS}
+google.clientId=${GOOGLE_CLIENT_ID}
 
-accessTokenValidTimeInMinutes=15
-refreshTokenValidTimeInMinutes=60
-
+# Token expiration time
+accessTokenValidTimeInMinutes=120
+refreshTokenValidTimeInMinutes=600
 tokenKey=123123123
+verifyEmailTimeHour=24
+
+# Logger
+logging.level.root=info
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
+logging.level.greencity.exception.handler.CustomExceptionHandler=trace
+logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
