--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -41,3 +41,10 @@ logging.level.root=info
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
+
+# Cloudinary
+cloud.name=${CLOUD_NAME}
+api.key=${API_KEY}
+api.secret=${API_SECRET}
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
