Move RabbitMQ connection credentials to environment variables
Since we are using RabbitMQ on the remote server, we have to
provide essentials credentials to connect to it.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -51,3 +51,6 @@ spring.servlet.multipart.max-request-size=2MB
 
 # RabbitMQ
 messaging.rabbit.email.topic=send.email.
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
