add cloudinary properties for prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -42,3 +42,10 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=${LOG_EXCEPTION
 logging.path=${LOG_PATH}
 logging.file=${LOG_FILE}
 logging.pattern.file=${LOG_PATTERN}
+
+# Cloudinary
+cloud.name=${CLOUD_NAME}
+api.key=${API_KEY}
+api.secret=${API_SECRET}
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
