--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -47,5 +47,5 @@ logging.pattern.file=${LOG_PATTERN}
 cloud.name=${CLOUD_NAME}
 api.key=${API_KEY}
 api.secret=${API_SECRET}
-spring.servlet.multipart.max-file-size=2MB
-spring.servlet.multipart.max-request-size=2MB
+spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
+spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
