Add dependency, properties and config for cache

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -48,3 +48,6 @@ api.key=${API_KEY}
 api.secret=${API_SECRET}
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
+# Cache
+spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
