--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -49,3 +49,6 @@ api.key=${API_KEY}
 api.secret=${API_SECRET}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
+
+# Cache
+spring.cache.caffeine.spec=${CACHE_SPEC}
