Added caching for getting three last eco news, getting all achievements and getting main page habit statistic

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -55,3 +55,6 @@ messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
+
+# Cache
+spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
