Edit tests, properties and pom.xml

--- a/core/src/test/resources/application.properties
+++ b/core/src/test/resources/application.properties
@@ -1,13 +1,13 @@
 # Datasource
-spring.datasource.url=jdbc:postgresql://localhost:5432/green
-spring.datasource.username=postgres
-spring.datasource.password=1111
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=0
 # Liquibase
-spring.liquibase.url=jdbc:postgresql://localhost:5432/green
-spring.liquibase.user=postgres
-spring.liquibase.password=1111
+spring.liquibase.url=jdbc:postgresql://localhost:5432/test
+spring.liquibase.user=${DATASOURCE_USER}
+spring.liquibase.password=${DATASOURCE_PASSWORD}
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 # Hibernate
@@ -18,15 +18,15 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 # Mail sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=mail.sender.greencity@gmail.com
-spring.mail.password=Lv-448.Java
+spring.mail.username=${EMAIL_ADDRESS}
+spring.mail.password=${EMAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 address=http://localhost:8080
 client.address=http://localhost:4200
 econews.address=http://localhost:4200/welcome
-sender.email.address=mail.sender.greencity@gmail.com
-google.clientId=129513550972-ffqpdq6e5basbn9pcdvroqf20ffcg09f.apps.googleusercontent.com
+sender.email.address=${EMAIL_ADDRESS}
+google.clientId=${GOOGLE_CLIENT_ID}
 # Token expiration time
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
@@ -39,6 +39,6 @@ logging.level.greencity.exception.handler.CustomExceptionHandler=trace
 logging.pattern.console=%d{"yyyy/MM/dd HH:mm:ss,SSS"} %magenta([%thread]) %highlight(%-5level) %M\\(%F:%L\\) - %msg%n
 # RabbitMQ
 messaging.rabbit.email.topic=email-topic-exchange
-spring.rabbitmq.host=localhost
-spring.rabbitmq.password=guest
-spring.rabbitmq.username=guest
+spring.rabbitmq.host=${RABBITMQ_HOST}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.username=${RABBITMQ_USERNAME}
