Added Google Storage uploader

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>1.105.0</version>
+        </dependency>
     </dependencies>
 
     <build>
