--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -49,9 +49,10 @@ api.key=${API_KEY}
 api.secret=${API_SECRET}
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
-
 # RabbitMQ
 messaging.rabbit.email.topic=email-topic-exchange
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
+# Cache
+spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
