--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -50,9 +50,10 @@ api.key=${API_KEY}
 api.secret=${API_SECRET}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
-
 # RabbitMQ
 messaging.rabbit.email.topic=${EMAIL_TOPIC}
 spring.rabbitmq.host=${RABBITMQ_HOST}
 spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
+# Cache
+spring.cache.caffeine.spec=${CACHE_SPEC}
