delete variable FolderName from FileServiceController; modificate usage of exceptions

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -55,3 +55,4 @@ spring.cache.caffeine.spec=maximumSize=50, expireAfterAccess=600s
 #Cloud Storage
 BUCKET_NAME=${BUCKET_NAME}
 PROJECT_ID=${PROJECT_ID}
+STATIC_URL=${STATIC_URL}
