--- a/core/src/main/resources/application-prod.properties
+++ b/core/src/main/resources/application-prod.properties
@@ -45,9 +45,6 @@ logging.file=${LOG_FILE}
 logging.pattern.file=${LOG_PATTERN}
 
 # Cloudinary
-cloud.name=${CLOUD_NAME}
-api.key=${API_KEY}
-api.secret=${API_SECRET}
 spring.servlet.multipart.max-file-size=${MAX_FILE_SIZE}
 spring.servlet.multipart.max-request-size=${MAX_REQUEST_SIZE}
 # RabbitMQ
@@ -57,3 +54,7 @@ spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.username=${RABBITMQ_USERNAME}
 # Cache
 spring.cache.caffeine.spec=${CACHE_SPEC}
+#Cloud Storage
+BUCKET_NAME=${BUCKET_NAME}
+PROJECT_ID=${PROJECT_ID}
+STATIC_URL=${STATIC_URL}
